output/brahtopg_p5_25_124/foundry_validation/F-002_Unchecked_ERC20_return_values_allow_sile/forge_stdout_attempt0.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xd9e1cE17f2641f24aE83637ab66a2cca9C378B9F". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xd9e1cE17f2641f24aE83637ab66a2cca9C378B9F". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:44:44:
   |
44 |     address public constant SUSHI_ROUTER = 0xd9e1cE17f2641f24AE83637ab66a2cca9C378B9F;
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x9f8F72aA9304c8B593d555F12eF6589cC3A579A2". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x9f8F72aA9304c8B593d555F12eF6589cC3A579A2". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:303:19:
    |
303 |         out[11] = 0x9f8F72aA9304c8B593d555F12ef6589cC3A579A2;
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

